@@ -1,3 +1,9 @@
+2013-10-15  Martin Jambor  <mjambor@suse.cz>
+
+	* ipa-utils.h (ipa_edge_within_scc): Declare.
+	* ipa-cp.c (edge_within_scc): Moved...
+	* ipa-utils.c (ipa_edge_within_scc): ...here.  Updated all callers.
+
 2013-01-10  Joern Rennecke  <joern.rennecke@embecosm.com>
 
 	Import from savannah.gnu.org:
